<resources>

    <!-- Global Strings -->
    <string name="app_name">Supply Drop</string>

    <string name="size_small">Small</string>
    <string name="size_medium">Medium</string>
    <string name="size_large">Large</string>
    <string name="size_extra_large">Extra Large</string>

    <string name="submit_button">Submit</string>

    <string name="welcome_greeting">Welcome to Supply Drop!</string>

    <!-- activity_greeting.xml strings -->
    <string name="title_activity_individual_greeting">Welcome to Supply Drop</string>
    <string name="individual_greeting_message">This app allows you to request supplies from
        organizations in your community.</string>
    <string name="individual_greeting_button">Get started</string>

    <!-- activity_organization_greeting.xml strings -->
    <string name="title_activity_organization_greeting">Welcome Partner!</string>
    <string name="organization_greeting">You\'ll be able to see where people are requesting
        supplies.</string>
    <string name="organization_greeting_button">Get started</string>

    <!-- activity_sign_in_page.xml strings -->
    <string name="title_activity_sign_in_page">Supply Drop</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_register">Register</string>
    <string name="error_username_already_exists">This username already exists</string>
    <string name="permission_rationale">Permission granted</string>
    <string name="prompt_organization">Are you an organization?</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_continue">Continue</string>

    <!-- activity_the_dashboard.xml strings -->
    <string name="title_activity_the_dashboard">The Dashboard</string>
    <string name="switch_to_map_button">Map</string>
    <string name="num_requests">Requests</string>
    <string name="num_food">Food</string>
    <string name="num_coat">Coats</string>
    <string name="num_socks">Socks</string>
    <string name="num_underwear">Underwear</string>
    <string name="num_sleeping_equipment">Sleeping Supplies</string>
    <string name="num_toothbrush">Toothbrushes</string>
    <string name="num_toothpaste">Toothpaste</string>
    <string name="num_soap">Soap</string>

    <!-- activity_the_map.xml strings -->
    <string name="title_activity_the_map">The Map</string>
    <string name="dashboard_button">Dashboard</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>

    <!-- activity_user__home__page.xml strings -->
    <string name="title_activity_home_page">Supplies Request Form</string>
    <string name="request_form_food_header">Food</string>
    <string name="request_form_single_checkbox">Yes</string>
    <string name="request_form_sleeping_stuff">Sleeping Bag or Blanket</string>
    <string name="request_form_socks_header">Socks</string>
    <string name="request_form_underwear_header">Underwear</string>
    <string name="request_form_coat_header">Coat</string>
    <string name="request_form_toothbrush_header">Toothbrush</string>
    <string name="request_form_toothpaste_header">Toothpaste</string>
    <string name="request_form_soap_header">Soap</string>
    <string name="request_form_location_header">Location</string>
    <string name="request_form_prompt">Please enter here...</string>

    <!-- activity_login_error.xml strings -->
    <string name="login_error">Error logging in. Please try again.</string>
    <string name="try_again_button">Try again</string>

    <!-- activity_request_form_error.xml strings -->
    <string name="default_error">Unknown error.</string>

    <!-- activity_request_submitted.xml strings -->
    <string name="title_activity_request_submitted">Success!</string>
    <string name="request_submitted">Submitted!</string>
    <string name="back_to_request_form">Finish</string>

</resources>