<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestForm">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:text="@string/title_activity_home_page" />

            <EditText
                android:id="@+id/food_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:text="@string/request_form_food_header" />

            <CheckBox
                android:id="@+id/food_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_form_single_checkbox" />

            <EditText
                android:id="@+id/sleeping_stuff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:text="@string/request_form_sleeping_stuff"
                tools:layout_editor_absoluteX="122dp"
                tools:layout_editor_absoluteY="504dp" />

            <CheckBox
                android:id="@+id/sleeping_stuff_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_form_single_checkbox" />

            <EditText
                android:id="@+id/socks_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:text="@string/request_form_socks_header" />

            <CheckBox
                android:id="@+id/socks_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_form_single_checkbox" />

            <EditText
                android:id="@+id/underwear_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:text="@string/request_form_underwear_header" />

            <CheckBox
                android:id="@+id/underwear_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_form_single_checkbox" />

            <EditText
                android:id="@+id/coat_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:text="@string/request_form_coat_header" />

            <RadioGroup
                android:id="@+id/coat_size_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/small_coat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/size_small" />

                <RadioButton
                    android:id="@+id/medium_coat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/size_medium" />

                <RadioButton
                    android:id="@+id/large_coat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/size_large" />

                <RadioButton
                    android:id="@+id/extra_large_coat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/size_extra_large" />

            </RadioGroup>

            <EditText
                android:id="@+id/toothbrush_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="none"
                android:text="@string/request_form_toothbrush_header" />

            <CheckBox
                android:id="@+id/toothbrush_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_form_single_checkbox" />

            <EditText
                android:id="@+id/toothpaste_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/request_form_toothpaste_header" />

            <CheckBox
                android:id="@+id/toothpaste_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_form_single_checkbox" />

            <EditText
                android:id="@+id/soap_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:text="@string/request_form_soap_header" />

            <CheckBox
                android:id="@+id/soap_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_form_single_checkbox" />

            <EditText
                android:id="@+id/location_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:text="@string/request_form_location_header" />

            <Button
                android:id="@+id/submit_form_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_button" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>