<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TheDashboard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dashboard_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/title_activity_the_dashboard"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.103"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@android:color/black"/>

            <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:id="@+id/num_requests" />

            <TextView
                android:id="@+id/food_requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/num_food"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:id="@+id/num_food" />

            <TextView
                android:id="@+id/sock_requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/num_socks"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:id="@+id/num_socks" />

            <TextView
                android:id="@+id/underwear_requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:text="@string/num_underwear" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:id="@+id/num_underwear" />

            <TextView
                android:id="@+id/sleeping_requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:text="@string/num_sleeping_equipment" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>


            <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:id="@+id/num_sleeping_equipment" />

            <TextView
                android:id="@+id/coat_requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:text="@string/num_coat" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:id="@+id/num_coat" />

            <TextView
                android:id="@+id/toothbrush_requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:text="@string/num_toothbrush" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:id="@+id/num_toothbrush" />

            <TextView
                android:id="@+id/toothpaste_requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:text="@string/num_toothpaste" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:id="@+id/num_toothpaste" />

            <TextView
                android:id="@+id/soap_requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:text="@string/num_soap" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:id="@+id/num_soap" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/switch_to_map_button"
        android:onClick="goToMap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>